# checkpoint_fragebogen

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: tauri.yml
backend/: .env.example  README.md  docker-compose.yml
backend/api/: requirements.txt
backend/api/app/: db.py  logging.py  main.py  main_depr.py  models.py  schemas.py
backend/db/: gold.sql  silver.sql
backend/db/backups/: backup_devserv.dump  bronze_backup.dump
backend/db/init/: 001_schema.sql
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  test.csv  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  AppSettings.tsx  AppShell.tsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  fs.json  network.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: backend.ts  helpers.ts  q_ahd_wired_deprec.tsx  question_registry_deprec.ts  questionnaire_state.ts
frontend/src/i18n/: translations.ts
frontend/src/lib/: settingsStore.ts  theme.ts
frontend/src/types/: react-calendar-heatmap.d.ts
frontend/src/workspaces/: BeraterWorkspace.tsx  LaborWorkspace.tsx
services/api/: Dockerfile
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Z:\Project(e), Arbeitsbereich(e)\Check-up Duisburg Kreis Wesel\fuertorben  Z:\Projekt(e), Arbeitsbereich(e)\Check-up Duisburg Kreis Wesel\fuertorben\chekpoint_daten.csv  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Q_alt.tsx  Questionnaire.tsx  q_ahd.tsx  q_ahd_full_refactored_fixed.tsx  q_ahd_wired.tsx
(+43 files in other folders)
