[package]
name = "checkpoint"
version = "0.7.8"
description = "checkpoint fragebogen der aids hilfe duisburg"
authors = ["tkimhofer"]
license = ""
repository = "https://github.com/tkimhofer/checkpoint_fragebogen"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2" 
machine-uid = "0.5"
tauri-plugin-store = "2.4.2"
